--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
   "homepage": ".",
   "scripts": {
     "build": "npm run build:dist && npm run build:app && npm run build:browser && npm run build:styleguide",
-    "build:app": "react-scripts-ts build",
+    "build:app": "node scripts/build.js",
     "build:dist": "tsc -p ./ && copyfiles \"./src/**/*.css\" dist --up 1",
     "build:styleguide": "styleguidist build",
     "build:browser": "webpack --config browser-build.config.js",
-    "eject": "react-scripts-ts eject",
     "lint": "tslint --project tsconfig.json --config tslint.json && tsc --noEmit --project tsconfig.json",
     "lint:prod": "tslint --project tsconfig.json --config tslint.prod.json && tsc --noEmit --project tsconfig.json",
     "pretest": "npm run lint:prod",
@@ -36,33 +35,69 @@
     "prepublishOnly": "npm run build",
     "release": "np --no-yarn && git push https://github.com/terrestris/geostyler.git master --tags",
     "styleguide": "styleguidist server",
-    "start": "react-scripts-ts start",
+    "start": "node scripts/start.js",
     "start:styleguide": "styleguidist server",
-    "test": "CI=true react-scripts-ts test --env=jsdom --runInBand --transformIgnorePatterns \"<rootDir>/node_modules/(?!ol|antd|codemirror)\"",
-    "test:watch": "react-scripts-ts test --env=jsdom --transformIgnorePatterns \"<rootDir>/node_modules/(?!ol|antd|codemirror)\""
+    "test": "CI=true node scripts/test.js --env=jsdom --runInBand --transformIgnorePatterns \"<rootDir>/node_modules/(?!ol|antd|codemirror)\"",
+    "test:watch": "node scripts/test.js --env=jsdom --transformIgnorePatterns \"<rootDir>/node_modules/(?!ol|antd|codemirror)\""
   },
   "dependencies": {
     "antd": "3.10.4",
+    "autoprefixer": "7.1.6",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.2",
+    "babel-preset-react-app": "^3.1.2",
     "blob": "0.0.5",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "chalk": "1.1.3",
     "codemirror": "5.41.0",
     "color": "3.1.0",
+    "css-loader": "0.28.7",
+    "dotenv": "4.0.0",
+    "dotenv-expand": "4.2.0",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
     "file-saver": "1.3.8",
+    "fork-ts-checker-webpack-plugin": "^0.2.8",
+    "fs-extra": "3.0.1",
     "geostyler-data": "0.5.2",
     "geostyler-geojson-parser": "0.4.5",
     "geostyler-openlayers-parser": "0.18.2",
     "geostyler-sld-parser": "0.17.2",
     "geostyler-style": "0.14.2",
     "geostyler-wfs-parser": "0.7.3",
+    "html-webpack-plugin": "2.29.0",
+    "jest": "20.0.4",
     "lodash": "4.17.11",
     "moment": "2.22.2",
+    "object-assign": "4.1.1",
     "ol": "4.6.5",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.8",
+    "promise": "8.0.1",
+    "raf": "3.4.0",
     "react": "16.6.0",
     "react-codemirror2": "5.1.0",
     "react-color": "2.14.1",
+    "react-dev-utils": "^5.0.2",
     "react-dom": "16.6.0",
     "react-rnd": "9.0.2",
-    "react-scripts-ts": "3.1.0",
-    "url-search-params": "1.1.0"
+    "resolve": "1.6.0",
+    "source-map-loader": "^0.2.1",
+    "style-loader": "0.19.0",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "ts-jest": "22.0.1",
+    "ts-loader": "^2.3.7",
+    "tsconfig-paths-webpack-plugin": "^2.0.0",
+    "tslint": "^5.7.0",
+    "tslint-config-prettier": "^1.10.0",
+    "tslint-react": "^3.2.0",
+    "uglifyjs-webpack-plugin": "1.2.5",
+    "url-loader": "0.6.2",
+    "url-search-params": "1.1.0",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.11.3",
+    "webpack-manifest-plugin": "1.3.2",
+    "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
     "@types/codemirror": "0.0.66",
@@ -106,6 +141,51 @@
       "src/DataProvider/**/*.{tsx,jsx}",
       "src/Util/**/*.{tsx,jsx}",
       "src/app/**/*.{tsx,jsx}"
+    ],
+    "setupFiles": [
+      "<rootDir>/config/polyfills.js"
+    ],
+    "setupTestFrameworkScriptFile": "<rootDir>/src/setupTests.ts",
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.(j|t)s?(x)",
+      "<rootDir>/src/**/?(*.)(spec|test).(j|t)s?(x)"
+    ],
+    "testEnvironment": "node",
+    "testURL": "http://localhost",
+    "transform": {
+      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.tsx?$": "<rootDir>/config/jest/typescriptTransform.js",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|ts|tsx)$"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
+    },
+    "moduleFileExtensions": [
+      "web.ts",
+      "ts",
+      "web.tsx",
+      "tsx",
+      "web.js",
+      "js",
+      "web.jsx",
+      "jsx",
+      "json",
+      "node",
+      "mjs"
+    ],
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "/home/jsuleiman/Projekte/geostyler/tsconfig.test.json"
+      }
+    }
+  },
+  "babel": {
+    "presets": [
+      "react-app"
     ]
   }
 }
