Fix typo in question issue form

--- a/.github/ISSUE_TEMPLATE/question.yaml
+++ b/.github/ISSUE_TEMPLATE/question.yaml
@@ -1,5 +1,5 @@
 name: ❓ Question
-description: Ask a question about the Geostyler project
+description: Ask a question about the GeoStyler project
 labels: [question]
 assignees: [jansule, KaiVolland]
 body:
