Fix typo in parser request issue template

--- a/.github/ISSUE_TEMPLATE/parser_request.yaml
+++ b/.github/ISSUE_TEMPLATE/parser_request.yaml
@@ -1,5 +1,5 @@
 name: 🗺️ Parser Request
-description: Suggest a parser for geostyler
+description: Suggest a parser for GeoStyler
 labels: [parser-request]
 assignees: [jansule, KaiVolland]
 body:
